--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ main_bkp_final.py
 data/
 */data/*
 data/*
-
+trained_model/*
 
 medsam.py
 
@@ -188,3 +188,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+trained_model/*
